update: change route /url/:alias -> /url/:id
